--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,10 @@ body,
   height: 100%;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -16,6 +20,15 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+.no-visible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
+
+.no-visible-scrollbar::-webkit-scrollbar {
+  display: none;
 }
 
 @layer base {
